Fixes QuickReply Alignment in Bootstrap Theme #789

--- a/Dnn.CommunityForums/themes/community-bootstrap/theme.css
+++ b/Dnn.CommunityForums/themes/community-bootstrap/theme.css
@@ -242,4 +242,7 @@
     max-width: 80%;
   }
 }
+.dnn-community-forums .dcf-topic-view .dcf-quick-reply .dcf-subscribe .amaf-chk-subs {
+  margin-right: 0.25rem;
+}
 /*# sourceMappingURL=theme.css.map */
